añadiendo index.html

--- a/Trabajo/Empresa/templates/index.html
+++ b/Trabajo/Empresa/templates/index.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-nav">
         <div class="container-fluid ">
             <a class="navbar-brand mx-4" href="#">VerdeVida</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,7 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#"><i class="fas fa-scroll"></i> About</a>
+                        <a class="nav-link " href="{%url 'about'%}"><i class="fas fa-scroll"></i> About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"> <i class="fas fa-inbox"></i> Contact</a>
@@ -42,7 +43,7 @@
 
         <div class="row">
             <div class="col-12">
-                <h2 class="mt-5 ideals">Ideals</h2>
+                <h2 class="mt-5 ideals h2-index">Ideals</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam temporibus aperiam veritatis consequatur officiis eaque laudantium animi blanditiis cupiditate nesciunt debitis ut ipsa, quae provident recusandae ab illo beatae reprehenderit?
                 Accusamus architecto excepturi facere, laboriosam aut repellat ab dolorem quos sapiente veritatis illum animi officiis ipsam vitae id dolores, nesciunt fugiat ea optio minima laudantium. Aut velit saepe optio recusandae.
                 Sed vero iusto dolor cum reprehenderit consectetur, doloremque minima magnam sequi voluptas autem alias recusandae, neque nulla numquam? Velit illum praesentium impedit, eius fugiat dignissimos sunt ullam autem unde alias.</p>
@@ -54,7 +55,7 @@
             </div>
 
             <div class="col-12 mt-4">
-                <h2 class="text-end">A little about us</h2>
+                <h2 class="text-end ideals h2-index">A little about us</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptas nisi libero nihil soluta corrupti amet sapiente culpa placeat autem obcaecati consectetur fugiat eaque nostrum, commodi saepe numquam veritatis sunt!
                 Ullam provident dolor id libero nemo tenetur reprehenderit qui enim autem fuga? Reiciendis aperiam quasi pariatur at, officia eos blanditiis minus suscipit distinctio tenetur hic, reprehenderit accusantium amet recusandae neque.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem placeat maxime dolorem alias molestias harum non doloribus voluptatem illo expedita debitis delectus beatae veritatis nihil dolorum officia, nulla itaque atque.
