--- a/Trabajo/Empresa/templates/about.html
+++ b/Trabajo/Empresa/templates/about.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse justify-content-end mx-4" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#"><i class="fas fa-home"></i> Home</a>
+                        <a class="nav-link " aria-current="page" href="{%url 'index'%}"><i class="fas fa-home"></i> Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#"><i class="fas fa-scroll"></i> About</a>
